--- a/testimonials.html
+++ b/testimonials.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/normalze.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" 
@@ -36,38 +37,41 @@
         </div>
     </div>
     <div class="header">
-        <div class="container">
-            <a href="index.html" class="logo">Flattern</a>
-            <i class="fas fa-bars"></i>
-            <ul class="links">
-                <li>
-                    <a href="index.html">home</a>
-                </li>
-                <li>
-                    <a href="about.html">about</a>
-                </li>
-                <li>
-                    <a href="services.html">services</a>
-                </li>
-                <li>
-                    <a href="testimonials.html" class="active">testimonials</a>
-                </li>
-                <li>
-                    <a href="pricing.html">pricing</a>
-                </li>
-                <li>
-                    <a href="portfolio.html">portfolio</a>
-                </li>
-                <li>
-                    <a href="#blog">blog</a>
-                </li>
-                <li>
-                    <a href="#">drop down</a>
-                </li>
-                <li>
-                    <a href="#contact">contant</a>
-                </li>
-            </ul>
+        <div class="continer">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="index.html">Flattern</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="services.html">Services</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">portfolio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="pricing.html">Pricing</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="testimonials.html">Testimonials</a>
+                      </li>
+                    </ul>
+                    <form class="d-flex">
+                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                  </div>
+                </div>
+              </nav>
         </div>
     </div>
     <!-- End Header  -->
@@ -289,5 +293,8 @@
                 </div>
             </div>
         </div>
+        <script src="js/bootstrap.js"></script>
+        <script src="js/jquery-3.6.0.min.js"></script>
+        <script src="js/popper.min.js"></script>
 </body>
 </html>
