--- a/about.html
+++ b/about.html
@@ -202,102 +202,116 @@
         </div>
     </div>
     <!-- End Team  -->
-        <!-- Start Footer  -->
-        <div class="footer">
-            <div class="container">
-                <div class="foot-head">
-                    <h2>FLATTERN</h2>
-                    <address>A108 Adam Street
-                        New York, NY 535022
-                        United States</address>
-                        <div class="contact">
-                            <div class="phone">
-                                <h2>Phone:</h2>
-                                <span>+1 5589 55488 55</span>
-                            </div>
-                            <div class="email">
-                                <h2>Email:</h2>
-                                <span> info@example.com</span>
-                            </div>
+    <!-- Start Footer  -->
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+            <div class="foot-head">
+                <h2>FLATTERN</h2>
+                <address>A108 Adam Street
+                    New York, NY 535022
+                    United States</address>
+                    <div class="contact">
+                        <div class="phone">
+                            <h2>Phone:</h2>
+                            <span>+1 5589 55488 55</span>
                         </div>
-                </div>
-                <div class="link">
-                    <h2>useful links</h2>
-                    <ul>
-                        <li>
-                            <i class="fas fa-angle-right"></i>
-                            <a href="index.html">
-                                home
-                            </a>
-                        </li>
-                        <li>
-                            <i class="fas fa-angle-right"></i>
-                            <a href="about.html">
-                                about us
-                            </a>
-                        </li>
-                        <li>
-                            <i class="fas fa-angle-right"></i>
-                            <a href="services.html">
-                                services
-                            </a>
-                        </li>
-                        <li>
-                            <i class="fas fa-angle-right"></i>
-                            <a href="#">
-                                Terms of service
-                            </a>
-                        </li>
-                        <li>
-                            <i class="fas fa-angle-right"></i>
-                            <a href="#">
-                                Privacy policy
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="serv">
-                    <h2>our services</h2>
-                    <ul>
-                        <li>
-                            <i class="fas fa-angle-right"></i>
-                            <a href="#">
-                                Web Design
-                            </a>
-                        </li>
-                        <li>
-                            <i class="fas fa-angle-right"></i>
-                            <a href="#">
-                                Web Development
-                            </a>
-                        </li>
-                        <li>
-                            <i class="fas fa-angle-right"></i>
-                            <a href="#">
-                                Product Management
-                            </a>
-                        </li>
-                        <li>
-                            <i class="fas fa-angle-right"></i>
-                            <a href="#">
-                                Marketing
-                            </a>
-                        </li>
-                        <li>
-                            <i class="fas fa-angle-right"></i>
-                            <a href="#">
-                                Graphic Design
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="letter">
-                    <h2>Join Our Newsletter</h2>
-                    <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+                        <div class="email">
+                            <h2>Email:</h2>
+                            <span> info@example.com</span>
+                        </div>
+                    </div>
+            </div>                    
                 </div>
             </div>
+            <div class="col">
+            <div class="link">
+                <h2>useful links</h2>
+                <ul>
+                    <li>
+                        <i class="fas fa-angle-right"></i>
+                        <a href="index.html">
+                            home
+                        </a>
+                    </li>
+                    <li>
+                        <i class="fas fa-angle-right"></i>
+                        <a href="about.html">
+                            about us
+                        </a>
+                    </li>
+                    <li>
+                        <i class="fas fa-angle-right"></i>
+                        <a href="services.html">
+                            services
+                        </a>
+                    </li>
+                    <li>
+                        <i class="fas fa-angle-right"></i>
+                        <a href="#">
+                            Terms of service
+                        </a>
+                    </li>
+                    <li>
+                        <i class="fas fa-angle-right"></i>
+                        <a href="#">
+                            Privacy policy
+                        </a>
+                    </li>
+                </ul>
+            </div>                
+            </div>
+            <div class="col">
+            <div class="serv">
+                <h2>our services</h2>
+                <ul>
+                    <li>
+                        <i class="fas fa-angle-right"></i>
+                        <a href="#">
+                            Web Design
+                        </a>
+                    </li>
+                    <li>
+                        <i class="fas fa-angle-right"></i>
+                        <a href="#">
+                            Web Development
+                        </a>
+                    </li>
+                    <li>
+                        <i class="fas fa-angle-right"></i>
+                        <a href="#">
+                            Product Management
+                        </a>
+                    </li>
+                    <li>
+                        <i class="fas fa-angle-right"></i>
+                        <a href="#">
+                            Marketing
+                        </a>
+                    </li>
+                    <li>
+                        <i class="fas fa-angle-right"></i>
+                        <a href="#">
+                            Graphic Design
+                        </a>
+                    </li>
+                </ul>
+            </div>                
+            </div>
+            <div class="col">
+                            <div class="letter">
+                <h2>Join Our Newsletter</h2>
+                <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                  </form>
+            </div>
+            </div>
         </div>
-        <!-- End Footer  -->
+    </div>
+    <!-- End Footer  -->
         <div class="copy">
             <div class="container">
                 <div class="text">
