--- a/index.html
+++ b/index.html
@@ -331,6 +331,8 @@
     <!-- Start Footer  -->
     <div class="footer">
         <div class="container">
+            <div class="row">
+                <div class="col">
             <div class="foot-head">
                 <h2>FLATTERN</h2>
                 <address>A108 Adam Street
@@ -346,7 +348,10 @@
                             <span> info@example.com</span>
                         </div>
                     </div>
+            </div>                    
+                </div>
             </div>
+            <div class="col">
             <div class="link">
                 <h2>useful links</h2>
                 <ul>
@@ -381,7 +386,9 @@
                         </a>
                     </li>
                 </ul>
+            </div>                
             </div>
+            <div class="col">
             <div class="serv">
                 <h2>our services</h2>
                 <ul>
@@ -416,10 +423,17 @@
                         </a>
                     </li>
                 </ul>
+            </div>                
             </div>
-            <div class="letter">
+            <div class="col">
+                            <div class="letter">
                 <h2>Join Our Newsletter</h2>
                 <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                  </form>
+            </div>
             </div>
         </div>
     </div>
