--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/normalze.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" 
@@ -39,14 +39,14 @@
     </div>
     <div class="header">
         <div class="continer">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container">
                   <a class="navbar-brand" href="index.html">Flattern</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <i class="fas fa-bars"></i>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
@@ -66,10 +66,6 @@
                         <a class="nav-link" href="testimonials.html">Testimonials</a>
                       </li>
                     </ul>
-                    <form class="d-flex">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
                   </div>
                 </div>
               </nav>
@@ -79,10 +75,10 @@
     <!-- Start landing  -->
     <div class="landing" id="landing">  
         <div class="container">
-            <h2>Sequi ea ut et est quaerat</h2>
-            <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. 
+            <h2 class="fw-bolder text-center">Sequi ea ut et est quaerat</h2>
+            <p class="lh-lg text-center">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. 
                 Minus et tempore modi architecto.</p>
-                <a href="#">read more</a>
+                <a href="#" class="mt-4 mb-3">read more</a>
         </div>
     </div>
     <!-- End landing  -->
@@ -102,37 +98,49 @@
     <div class="services">
         <div class="container">
             <div class="box">
-                <i class="fas fa-briefcase"></i>
+                <div class="icon">
+                    <i class="fas fa-briefcase"></i>
+                </div>
                 <h2>LOREM IPSUM</h2>
                 <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
                     sint occaecati cupiditate non provident</p>
             </div>
             <div class="box">
-                <i class="fas fa-briefcase"></i>
+                <div class="icon">
+                    <i class="fas fa-briefcase"></i>
+                </div>
                 <h2>LOREM IPSUM</h2>
                 <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
                     sint occaecati cupiditate non provident</p>
             </div>
             <div class="box">
-                <i class="fas fa-briefcase"></i>
+                <div class="icon">
+                    <i class="fas fa-briefcase"></i>
+                </div>
                 <h2>LOREM IPSUM</h2>
                 <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
                     sint occaecati cupiditate non provident</p>
             </div>
             <div class="box">
-                <i class="fas fa-briefcase"></i>
+                <div class="icon">
+                    <i class="fas fa-briefcase"></i>
+                </div>
                 <h2>LOREM IPSUM</h2>
                 <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
                     sint occaecati cupiditate non provident</p>
             </div>
             <div class="box">
-                <i class="fas fa-briefcase"></i>
+                <div class="icon">
+                    <i class="fas fa-briefcase"></i>
+                </div>
                 <h2>LOREM IPSUM</h2>
                 <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
                     sint occaecati cupiditate non provident</p>
             </div>
             <div class="box">
-                <i class="fas fa-briefcase"></i>
+                <div class="icon">
+                    <i class="fas fa-briefcase"></i>
+                </div>
                 <h2>LOREM IPSUM</h2>
                 <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
                     sint occaecati cupiditate non provident</p>
@@ -144,13 +152,13 @@
     <div class="portfolio">
         <div class="container">
             <div class="portfolio-link">
-                <a href="#" class="active">all</a>
-                <a href="#">app</a>
-                <a href="#">card</a>
-                <a href="#">web</a>
+                <span class="active" data-class=".box">all</span>
+                <span data-class=".app">app</span>
+                <span data-class=".card">card</span>
+                <span data-class=".web">web</span>
             </div>
             <div class="portfolio-content">
-                <div class="box">
+                <div class="box web">
                     <div class="img">
                         <img src="images/portfolio/portfolio-1.jpg " alt="">
                     </div>
@@ -165,14 +173,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="box">
+                <div class="box app">
                     <div class="img">
                         <img src="images/portfolio/portfolio-2.jpg " alt="">
                     </div>
                     <div class="text">
                         <div class="head">
-                            <h2>web1</h2>
-                            <span>web</span>
+                            <h2>app1</h2>
+                            <span>app</span>
                         </div>
                         <div class="info">
                             <i class="fas fa-link"></i>
@@ -180,14 +188,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="box">
+                <div class="box card">
                     <div class="img">
                         <img src="images/portfolio/portfolio-3.jpg " alt="">
                     </div>
                     <div class="text">
                         <div class="head">
-                            <h2>web1</h2>
-                            <span>web</span>
+                            <h2>card1</h2>
+                            <span>card</span>
                         </div>
                         <div class="info">
                             <i class="fas fa-link"></i>
@@ -210,7 +218,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="box">
+                <div class="box web">
                     <div class="img">
                         <img src="images/portfolio/portfolio-5.jpg" alt="">
                     </div>
@@ -225,7 +233,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="box">
+                <div class="box app">
                     <div class="img">
                         <img src="images/portfolio/portfolio-6.jpg " alt="">
                     </div>
@@ -240,7 +248,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="box">
+                <div class="box card">
                     <div class="img">
                         <img src="images/portfolio/portfolio-7.jpg " alt="">
                     </div>
@@ -255,7 +263,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="box">
+                <div class="box web">
                     <div class="img">
                         <img src="images/portfolio/portfolio-8.jpg " alt="">
                     </div>
@@ -270,7 +278,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="box">
+                <div class="box card">
                     <div class="img">
                         <img src="images/portfolio/portfolio-9.jpg " alt="">
                     </div>
@@ -445,15 +453,23 @@
                 <p>Designed by <span>Ahmed Walid</span></p>
             </div>
             <div class="icons">
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-linkedin-in"></i>
-                <i class="fab fa-skype"></i>
+                <div class="icon">
+                    <i class="fab fa-facebook-f"></i>
+                </div>
+                <div class="icon">
+                    <i class="fab fa-twitter"></i>
+                </div>
+                <div class="icon">
+                    <i class="fab fa-linkedin-in"></i>
+                </div>
+                <div class="icon">
+                    <i class="fab fa-skype"></i>
+                </div>
             </div>
         </div>
     </div>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/popper.min.js"></script>
+    <script src="js/all.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
