--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/normalze.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" 
@@ -39,22 +39,22 @@
     </div>
     <div class="header">
         <div class="continer">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container">
                   <a class="navbar-brand" href="index.html">Flattern</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <i class="fas fa-bars"></i>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="services.html">Services</a>
+                        <a class="nav-link active" href="services.html">Services</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="portfolio.html">portfolio</a>
@@ -66,10 +66,6 @@
                         <a class="nav-link" href="testimonials.html">Testimonials</a>
                       </li>
                     </ul>
-                    <form class="d-flex">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
                   </div>
                 </div>
               </nav>
@@ -88,48 +84,60 @@
             </div>
         </div>
         <!-- Side  -->
-        <!-- Start Services  -->
-        <div class="services">
-            <div class="container">
-                <div class="box">
+    <!-- Start Services  -->
+    <div class="services">
+        <div class="container">
+            <div class="box">
+                <div class="icon">
                     <i class="fas fa-briefcase"></i>
-                    <h2>LOREM IPSUM</h2>
-                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
-                        sint occaecati cupiditate non provident</p>
                 </div>
-                <div class="box">
+                <h2>LOREM IPSUM</h2>
+                <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
+                    sint occaecati cupiditate non provident</p>
+            </div>
+            <div class="box">
+                <div class="icon">
                     <i class="fas fa-briefcase"></i>
-                    <h2>LOREM IPSUM</h2>
-                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
-                        sint occaecati cupiditate non provident</p>
                 </div>
-                <div class="box">
+                <h2>LOREM IPSUM</h2>
+                <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
+                    sint occaecati cupiditate non provident</p>
+            </div>
+            <div class="box">
+                <div class="icon">
                     <i class="fas fa-briefcase"></i>
-                    <h2>LOREM IPSUM</h2>
-                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
-                        sint occaecati cupiditate non provident</p>
                 </div>
-                <div class="box">
+                <h2>LOREM IPSUM</h2>
+                <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
+                    sint occaecati cupiditate non provident</p>
+            </div>
+            <div class="box">
+                <div class="icon">
                     <i class="fas fa-briefcase"></i>
-                    <h2>LOREM IPSUM</h2>
-                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
-                        sint occaecati cupiditate non provident</p>
                 </div>
-                <div class="box">
+                <h2>LOREM IPSUM</h2>
+                <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
+                    sint occaecati cupiditate non provident</p>
+            </div>
+            <div class="box">
+                <div class="icon">
                     <i class="fas fa-briefcase"></i>
-                    <h2>LOREM IPSUM</h2>
-                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
-                        sint occaecati cupiditate non provident</p>
                 </div>
-                <div class="box">
+                <h2>LOREM IPSUM</h2>
+                <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
+                    sint occaecati cupiditate non provident</p>
+            </div>
+            <div class="box">
+                <div class="icon">
                     <i class="fas fa-briefcase"></i>
-                    <h2>LOREM IPSUM</h2>
-                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
-                        sint occaecati cupiditate non provident</p>
                 </div>
+                <h2>LOREM IPSUM</h2>
+                <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
+                    sint occaecati cupiditate non provident</p>
             </div>
         </div>
-        <!-- End Services  -->
+    </div>
+    <!-- End Services  -->
         <!-- Start Features -->
         <div class="feature">
             <div class="container">
@@ -139,25 +147,34 @@
                     
             <div class="feature-content">
                 <div class="boxs">
-                    <div class="box">
+                    <div class="box" data-show=".img-1">
                         <h2>Modi sit est</h2>
                         <p>Quis excepturi porro totam sint earum quo nulla perspiciatis eius.</p>
                     </div>
-                        <div class="box">
+                        <div class="box"  data-show=".img-2">
                             <h2>Modi sit est</h2>
                             <p>Quis excepturi porro totam sint earum quo nulla perspiciatis eius.</p>
                         </div>
-                            <div class="box">
+                            <div class="box"  data-show=".img-3">
                                 <h2>Modi sit est</h2>
                                 <p>Quis excepturi porro totam sint earum quo nulla perspiciatis eius.</p>
                             </div>
-                                <div class="box">
+                                <div class="box"  data-show=".img-4">
                                     <h2>Modi sit est</h2>
                                     <p>Quis excepturi porro totam sint earum quo nulla perspiciatis eius.</p>
                                 </div> 
                             </div>
-                <div class="img">
+                <div class="img img-1">
                     <img src="images/features-1.png" alt="">
+                </div>
+                <div class="img img-2">
+                    <img src="images/features-2.png" alt="">
+                </div>
+                <div class="img img-3">
+                    <img src="images/features-3.png" alt="">
+                </div>
+                <div class="img img-4">
+                    <img src="images/features-4.png" alt="">
                 </div>
         </div>
         </div>
@@ -279,15 +296,23 @@
                 <p>Designed by <span>Ahmed Walid</span></p>
             </div>
             <div class="icons">
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-linkedin-in"></i>
-                <i class="fab fa-skype"></i>
+                <div class="icon">
+                    <i class="fab fa-facebook-f"></i>
+                </div>
+                <div class="icon">
+                    <i class="fab fa-twitter"></i>
+                </div>
+                <div class="icon">
+                    <i class="fab fa-linkedin-in"></i>
+                </div>
+                <div class="icon">
+                    <i class="fab fa-skype"></i>
+                </div>
             </div>
         </div>
     </div>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/popper.min.js"></script>
+    <script src="js/all.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
