--- a/testimonials.html
+++ b/testimonials.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/normalze.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" 
@@ -38,16 +38,16 @@
     </div>
     <div class="header">
         <div class="continer">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container">
                   <a class="navbar-brand" href="index.html">Flattern</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <i class="fas fa-bars"></i>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -62,13 +62,9 @@
                         <a class="nav-link" href="pricing.html">Pricing</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="testimonials.html">Testimonials</a>
+                        <a class="nav-link active" href="testimonials.html">Testimonials</a>
                       </li>
                     </ul>
-                    <form class="d-flex">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
                   </div>
                 </div>
               </nav>
@@ -293,22 +289,30 @@
         </div>
     </div>
     <!-- End Footer  -->
-        <div class="copy">
-            <div class="container">
-                <div class="text">
-                    <h2>&copy;Copyright All Rights Reserved</h2>
-                    <p>Designed by <span>Ahmed Walid</span></p>
-                </div>
-                <div class="icons">
+    <div class="copy">
+        <div class="container">
+            <div class="text">
+                <h2>&copy;Copyright All Rights Reserved</h2>
+                <p>Designed by <span>Ahmed Walid</span></p>
+            </div>
+            <div class="icons">
+                <div class="icon">
                     <i class="fab fa-facebook-f"></i>
+                </div>
+                <div class="icon">
                     <i class="fab fa-twitter"></i>
+                </div>
+                <div class="icon">
                     <i class="fab fa-linkedin-in"></i>
+                </div>
+                <div class="icon">
                     <i class="fab fa-skype"></i>
                 </div>
             </div>
         </div>
-        <script src="js/bootstrap.js"></script>
-        <script src="js/jquery-3.6.0.min.js"></script>
-        <script src="js/popper.min.js"></script>
+    </div>
+        <script src="js/all.min.js"></script>
+        <script src="js/bootstrap.bundle.min.js"></script>
+        <script src="js/script.js"></script>
 </body>
 </html>
