--- a/about.html
+++ b/about.html
@@ -144,11 +144,19 @@
             <div class="team-content">
                 <div class="img">
                     <img src="images/team/team-1.jpg" alt="">
-                    <div class="link">
-                        <i class="fab fa-facebook-square"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-linkedin"></i>
+                    <div class="links">
+                        <div class="link">
+                            <i class="fab fa-facebook-square"></i>
+                        </div>
+                        <div class="link">
+                            <i class="fab fa-twitter"></i>
+                        </div>
+                        <div class="link">
+                            <i class="fab fa-instagram"></i>
+                        </div>
+                        <div class="link">
+                            <i class="fab fa-linkedin"></i>
+                        </div>
                     </div>
                     <div class="info">
                         <h2>Walter White</h2>
@@ -157,11 +165,19 @@
                 </div>
                 <div class="img">
                     <img src="images/team/team-2.jpg" alt="">
-                    <div class="link">
-                        <i class="fab fa-facebook-square"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-linkedin"></i>
+                    <div class="links">
+                        <div class="link">
+                            <i class="fab fa-facebook-square"></i>
+                        </div>
+                        <div class="link">
+                            <i class="fab fa-twitter"></i>
+                        </div>
+                        <div class="link">
+                            <i class="fab fa-instagram"></i>
+                        </div>
+                        <div class="link">
+                            <i class="fab fa-linkedin"></i>
+                        </div>
                     </div>
                     <div class="info">
                         <h2>Sarah Jhonson</h2>
@@ -170,11 +186,19 @@
                 </div>
                 <div class="img">
                     <img src="images/team/team-3.jpg" alt="">
-                    <div class="link">
-                        <i class="fab fa-facebook-square"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-linkedin"></i>
+                    <div class="links">
+                        <div class="link">
+                            <i class="fab fa-facebook-square"></i>
+                        </div>
+                        <div class="link">
+                            <i class="fab fa-twitter"></i>
+                        </div>
+                        <div class="link">
+                            <i class="fab fa-instagram"></i>
+                        </div>
+                        <div class="link">
+                            <i class="fab fa-linkedin"></i>
+                        </div>
                     </div>
                     <div class="info">
                         <h2>William Anderson</h2>
@@ -183,11 +207,19 @@
                 </div>
                 <div class="img">
                     <img src="images/team/team-4.jpg" alt="">
-                    <div class="link">
-                        <i class="fab fa-facebook-square"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-linkedin"></i>
+                    <div class="links">
+                        <div class="link">
+                            <i class="fab fa-facebook-square"></i>
+                        </div>
+                        <div class="link">
+                            <i class="fab fa-twitter"></i>
+                        </div>
+                        <div class="link">
+                            <i class="fab fa-instagram"></i>
+                        </div>
+                        <div class="link">
+                            <i class="fab fa-linkedin"></i>
+                        </div>
                     </div>
                     <div class="info">
                         <h2>Amanda Jepson</h2>
